# rz_read_metadata

./: .gitignore  CMakeLists.txt  README.md  Rz_read_metadata.json.in  rz_read_metadata.cpp  rz_read_metadata.hpp  rz_read_metadataconstants.hpp
includes/: database.cpp  database.hpp  rz_config.h  rz_photo-gallery_plugins.hpp  rz_photo_metadata.cpp  rz_photo_metadata.hpp  rz_snippets.cpp  rz_snippets.hpp  sqlite3.cpp  sqlite3.hpp
